# pyglobegl

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  biome.json  pyproject.toml  pytest.ini  ty.toml  typos.toml  uv-secure.toml
examples/: arcs_basic.py  earthquakes_hexbin.py  hexed_polygons.py  jupyter_demo.ipynb  layer_montage.py  marimo_demo.py  paths_random.py  points_basic.py  polygons_choropleth.py  polygons_choropleth_marimo_ui.py  population_heatmap.py  random_rings.py  satellites.py  solara_demo.py  tiles.py  world_cities.py  world_population_hexbin.py
frontend/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
tests/: conftest.py  test_arcs_callbacks.py  test_arcs_layer.py  test_bump_image_url.py  test_frontend_python.py  test_geopandas_arcs.py  test_geopandas_extra_layers.py  test_geopandas_paths.py  test_geopandas_points.py  test_geopandas_polygons.py  test_globe_atmosphere.py  test_globe_atmosphere_altitude.py  test_globe_atmosphere_color.py  test_globe_callbacks.py  test_globe_curvature_resolution.py  test_globe_image_url.py  test_globe_init_options.py  test_globe_layer.py  test_globe_material.py  test_globe_tile_engine.py  test_heatmaps_layer.py  test_hexbin_callbacks.py  test_hexbin_layer.py  test_hexed_polygons_layer.py  test_labels_layer.py  test_layout_background_image.py  test_movingpandas_paths.py  test_optional_dependencies.py  test_particles_layer.py  test_paths_layer.py  test_points_callbacks.py  test_points_layer.py  test_polygons_callbacks.py  test_polygons_layer.py  test_rings_layer.py  test_smoke.py  (+7 more)
(+13 files in other folders)
